# docker-vit

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: precommit.yaml
