[tool.poetry]
name = "docker-vit"
version = "0.1.0"
description = "Create a Docker image for Vision Transformer (ViT) endpoint"
authors = ["Vincent Garcia"]
license = "MIT License"
readme = "README.md"
packages = [{include = "docker_vit"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
