[tool.poetry]
name = "docker-vit"
version = "0.1.0"
description = "Create a Docker image for Vision Transformer (ViT) endpoint"
authors = ["Vincent Garcia"]
license = "MIT License"
readme = "README.md"
packages = [{include = "docker_vit"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
pillow = "^9.5.0"
transformers = "^4.30.1"
torch = "^2.0.1"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
